--- a/devfile.yaml
+++ b/devfile.yaml
@@ -3,5 +3,6 @@ metadata:
   name: minimal-devfile
 projects:
   - name: min-df-project
-    git:
+    source:
+      type: git
       location: 'https://github.com/RickJWagner/DevSpaces_Minimal_DevFile'  
