--- a/devfile.yaml
+++ b/devfile.yaml
@@ -2,3 +2,12 @@ schemaVersion: 2.1.0
 metadata:
   name: java-gradle
   namespace: rhn-support-rick-dev
+commands:
+  - exec:
+      commandLine: gradle build
+      component: tools
+      group:
+        kind: build
+      label: Build
+      workingDir: '${PROJECTS_ROOT}/gs-validating-form-input/complete'
+    id: 1-build
