--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,4 +1,8 @@
-apiVersion: 1.0.0
+apiVersion: 2.1.0
 metadata:
   generateName: java-min-
-starterProjects:
+projects:
+  - name: min-simple
+    source:
+      type: git
+      location: 'https://github.com/RickJWagner/DevSpaces_Minimal_DevFile'
